# AXIOM

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  anomaly_model.onnx  audit.toml  demo_anomaly.ps1  docker-compose.yml  extract_features.sql  load_test.py  load_test_p2p.py  retrain_model.py  run_swarm_test.ps1  stress_swarm.py  test_p2p.ps1  train_anomaly_model.py
.cargo/: audit.toml  config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
axiom-analytics/: Cargo.toml
axiom-analytics-ml/: Dockerfile  requirements.txt  streaming_ml.py
axiom-analytics/src/: clickhouse.rs  lib.rs  main.rs  metrics.rs
axiom-core/: .gitignore  Cargo.toml  README.md
axiom-core/policies/: zero_trust.rego
axiom-core/src/: error.rs  lib.rs
axiom-core/src/crypto/: mod.rs  secure_memory.rs
axiom-core/src/did/: document.rs  method.rs  mod.rs  resolver.rs
axiom-core/src/keys/: ed25519.rs  hybrid.rs  kyber.rs  mod.rs
axiom-core/src/ml/: anomaly.rs  mod.rs
axiom-core/src/pdp/: audit.rs  engine.rs  mod.rs
axiom-core/tests/: audit_integration.rs  did_document.rs  pdp.rs  private_key_confinement.rs  resolution.rs
axiom-ingestor/: Cargo.toml
axiom-ingestor/src/: lib.rs  main.rs
axiom-node/: Cargo.toml
axiom-node/src/: lib.rs  main.rs
axiom-p2p/: Cargo.toml
axiom-p2p/src/: behaviour.rs  crdt.rs  error.rs  lib.rs  main.rs  message.rs  node.rs
axiom-p2p/tests/: e2e_revocation.rs
clickhouse/: init.sql
docs/: runbook-pdp-degraded.md  runbook-tls-rotation.md
docs/adr/: 001-crdt-over-blockchain.md  002-clickhouse-over-elasticsearch.md  003-statistical-anomaly-over-ml.md  004-crdt-sqlite-persistence.md  005-axiom-node-stateless-deployment.md  005-pdp-audit-failure-behavior.md  006-redis-ha-connectivity.md
frontend/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.js
frontend/src/: App.jsx  index.css  main.js  style.css
frontend/src/api/: axiom.js  webauthn.js
frontend/src/components/access/: AccessPanel.jsx  AccessPanel.module.css  ResourceButton.jsx  ResourceButton.module.css
frontend/src/components/layout/: Topbar.jsx  Topbar.module.css
frontend/src/components/widgets/: RevocationPanel.jsx  RevocationPanel.module.css  ScoreWidget.jsx  ScoreWidget.module.css
frontend/src/hooks/: useAnomalyScore.js  usePasskey.js
frontend/src/pages/: DashboardPage.jsx  DashboardPage.module.css  LoginPage.jsx  LoginPage.module.css
grafana/provisioning/dashboards/: ai_brain.json  axiom.json  swarm.json
grafana/provisioning/datasources/: datasource.yml
k8s/base/: axiom-analytics-ml.yaml  axiom-bootstrap.yaml  axiom-node.yaml  backup-cronjob.yaml  bootstrap-secrets.yaml  cert-manager.yaml  clickhouse.yaml  kustomization.yaml  monitoring.yaml  network-policy.yaml  redis.yaml
pdp-server/: Cargo.toml
pdp-server/src/: lib.rs  main.rs
prometheus/: prometheus.yml
regorus-local/: Cargo.toml
regorus-local/bindings/csharp/Regorus.Tests/: Regorus.Tests.csproj  RegorusTests.cs
regorus-local/tests/kata/data/k8s-policy-job/: inputs.txt
regorus-local/tests/kata/data/k8s-policy-pod/: inputs.txt
regorus-local/tests/kata/data/k8s-policy-rc/: inputs.txt
sdk/: index.ts  package-lock.json  package.json  tsconfig.json
