[package]
name = "axiom-analytics"
version = "0.1.0"
edition = "2021"
description = "Endpoint estadístico /anomaly_score sobre datos ClickHouse de AXIOM"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"

# HTTP client para ClickHouse
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Manejo de errores
anyhow = "1"
thiserror = "1"
