[package]
name = "axiom-ingestor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Redis Streams con soporte async
redis = { version = "1.2", features = ["tokio-comp", "streams", "sentinel"] }

# Cliente HTTP para ClickHouse (usamos la API HTTP nativa para máxima compatibilidad)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging estructurado
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Para leer variables de entorno
dotenvy = "0.15"
anyhow = "1.0.103"
