[package]
name = "axiom-node"
version = "0.1.0"
edition = "2021"

[dependencies]
axiom-core = { path = "../axiom-core" }
axiom-p2p = { path = "../axiom-p2p" }
axiom-ingestor = { path = "../axiom-ingestor" }
axiom-analytics = { path = "../axiom-analytics" }
pdp-server = { path = "../pdp-server" }

tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
prometheus-client = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
redis = { version = "0.27", features = ["sentinel", "tokio-comp"] }
libp2p = { version = "0.54", features = ["tokio", "tcp", "noise", "yamux", "ed25519"] }
hex = "0.4.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
