[package]
name = "axiom-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
axiom-core = { path = "../axiom-core" }
automerge = "0.10"
futures = "0.3.32"
libp2p = { version = "0.54", features = ["tokio", "tcp", "noise", "yamux", "ed25519", "mdns", "kad", "identify", "gossipsub", "ping", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15.7"
hex = "0.4.3"
