[package]
name = "pdp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axiom-core = { path = "../axiom-core" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "0.27", features = ["sentinel", "tokio-comp"] }
tracing = "0.1"
chrono = "0.4"
notify = "6.1.1"
prometheus-client = "0.22"
